fix(layout): fix z-index of matrix

--- a/www/src/scss/components/matrix.scss
+++ b/www/src/scss/components/matrix.scss
@@ -106,6 +106,7 @@ matrixheader {
 
     &__header {
         position: fixed;
+        z-index: 90;
     }
 
     &__bacteriumLabelText {
